--- a/ChickenBanana.IbmMq.Tools.Test/ChickenBanana.IbmMq.Tools.Test.csproj
+++ b/ChickenBanana.IbmMq.Tools.Test/ChickenBanana.IbmMq.Tools.Test.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
-    <IsPackable>false</IsPackable>
+    <IsPackable>false</IsPackable>    
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="IBMMQDotnetClient" Version="9.2.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="System.Security.Principal.Windows" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
