--- a/ChickenBanana.IbmMq.Tools/ChickenBanana.IbmMq.Tools.csproj
+++ b/ChickenBanana.IbmMq.Tools/ChickenBanana.IbmMq.Tools.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    <PackageReference Include="System.Security.Principal.Windows" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
